--- a/About.css
+++ b/About.css
@@ -6,55 +6,68 @@
 .u-section-1 .u-btn-3 {background-image: none; font-weight: 700; font-size: 1.5rem; margin: -57px auto 0 275px; padding: 9px 0 10px}
 .u-section-1 .u-btn-4 {background-image: none; font-weight: 700; font-size: 1.5rem; margin: -57px auto 14px 466px; padding: 9px 0 10px} 
 
-@media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 432px}
-.u-section-1 .u-text-1 {margin-right: 64px; margin-left: 64px}
-.u-section-1 .u-btn-1 {margin-left: 0}
-.u-section-1 .u-btn-2 {margin-top: -51px; margin-left: 0}
-.u-section-1 .u-btn-3 {margin-top: 38px; margin-left: 75px}
-.u-section-1 .u-btn-4 {margin-top: -51px; margin-bottom: 60px; margin-left: 266px} }
+@media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 539px}
+.u-section-1 .u-text-1 {margin-top: 13px; margin-left: 0; margin-right: 0}
+.u-section-1 .u-btn-1 {margin-top: 13px; margin-left: 54px}
+.u-section-1 .u-btn-2 {margin-left: 183px}
+.u-section-1 .u-btn-3 {margin-left: 269px}
+.u-section-1 .u-btn-4 {margin-right: 368px; margin-bottom: 60px; margin-left: auto} }
 
 @media (max-width: 991px){ .u-section-1 {background-position: 92.28% 56.31%; background-size: 115%}
-.u-section-1 .u-sheet-1 {min-height: 331px}
-.u-section-1 .u-text-1 {margin-right: 49px; margin-left: 49px}
-.u-section-1 .u-btn-3 {margin-left: 0}
-.u-section-1 .u-btn-4 {margin-left: 46px} }
+.u-section-1 .u-sheet-1 {min-height: 413px}
+.u-section-1 .u-btn-1 {margin-left: 0}
+.u-section-1 .u-btn-2 {margin-left: 0}
+.u-section-1 .u-btn-3 {margin-left: 49px}
+.u-section-1 .u-btn-4 {margin-right: 148px} }
 
-@media (max-width: 767px){ .u-section-1 .u-sheet-1 {min-height: 248px}
-.u-section-1 .u-text-1 {margin-right: 37px; margin-left: 37px}
-.u-section-1 .u-btn-4 {margin-left: 0} }
+@media (max-width: 767px){ .u-section-1 .u-sheet-1 {min-height: 439px}
+.u-section-1 .u-text-1 {font-size: 1.875rem; width: auto; margin-top: 0; margin-left: auto}
+.u-section-1 .u-btn-1 {margin-top: 44px}
+.u-section-1 .u-btn-2 {margin-top: 0}
+.u-section-1 .u-btn-3 {margin-top: 0; margin-left: 0}
+.u-section-1 .u-btn-4 {margin-top: 10px; margin-right: 0} }
 
-@media (max-width: 575px){ .u-section-1 .u-sheet-1 {min-height: 156px}
-.u-section-1 .u-text-1 {margin-right: 23px; margin-left: 23px} }.u-section-2 {background-image: none; min-height: 572px}
+@media (max-width: 575px){ .u-section-1 .u-sheet-1 {min-height: 302px}
+.u-section-1 .u-text-1 {font-size: 1.25rem; margin-top: 42px; margin-right: 9px}
+.u-section-1 .u-btn-1 {font-size: 1.25rem; margin-top: -32px}
+.u-section-1 .u-btn-2 {font-size: 1.25rem}
+.u-section-1 .u-btn-3 {font-size: 1.25rem}
+.u-section-1 .u-btn-4 {font-size: 1.25rem; margin-top: 0; margin-bottom: 11px} }.u-section-2 {background-image: none; min-height: 572px}
 .u-section-2 .u-image-1 {width: 570px; height: 570px; margin: 1px auto 0 0}
 .u-section-2 .u-text-1 {font-weight: 700; font-size: 1.875rem; margin: -522px calc(((100% - 1140px) / 2) + 202px) 0 calc(((100% - 1140px) / 2) + 594px)}
 .u-section-2 .u-text-2 {font-size: 1.25rem; margin: 28px calc(((100% - 1140px) / 2) + -34px) 0 calc(((100% - 1140px) / 2) + 506px)}
 .u-section-2 .u-text-3 {font-size: 1.25rem; font-weight: 700; background-image: none; margin: 42px calc(((100% - 1140px) / 2) + -50px) 60px calc(((100% - 1140px) / 2) + 506px)} 
 
-@media (max-width: 1199px){ .u-section-2 .u-image-1 {width: 470px; height: 470px}
+@media (max-width: 1199px){ .u-section-2 {min-height: 529px}
+.u-section-2 .u-image-1 {width: 470px; height: 470px}
 .u-section-2 .u-text-1 {margin-top: -422px; margin-right: calc(((100% - 940px) / 2) + 102px); margin-left: calc(((100% - 940px) / 2) + 494px)}
-.u-section-2 .u-text-2 {margin-right: calc(((100% - 940px) / 2) + 306px); margin-left: calc(((100% - 940px) / 2) + 400px)}
-.u-section-2 .u-text-3 {margin-right: calc(((100% - 940px) / 2) + 412px); margin-left: calc(((100% - 940px) / 2) + 400px)} }
+.u-section-2 .u-text-2 {width: auto; margin-right: calc(((100% - 940px) / 2) + 53px); margin-left: calc(((100% - 940px) / 2) + 400px)}
+.u-section-2 .u-text-3 {font-size: 1.125rem; width: auto; margin-right: calc(((100% - 940px) / 2)); margin-bottom: 42px; margin-left: calc(((100% - 940px) / 2) + 420px); font-weight: normal} }
 
 @media (max-width: 991px){ .u-section-2 .u-image-1 {width: 360px; height: 360px}
 .u-section-2 .u-text-1 {margin-top: -312px; margin-right: calc(((100% - 720px) / 2)); margin-left: calc(((100% - 720px) / 2) + 376px)}
 .u-section-2 .u-text-2 {margin-right: calc(((100% - 720px) / 2) + 234px); margin-left: calc(((100% - 720px) / 2) + 306px)}
 .u-section-2 .u-text-3 {margin-right: calc(((100% - 720px) / 2) + 316px); margin-left: calc(((100% - 720px) / 2) + 306px)} }
 
-@media (max-width: 767px){ .u-section-2 .u-image-1 {width: 270px; height: 270px}
-.u-section-2 .u-text-1 {margin-top: -222px; margin-right: calc(((100% - 540px) / 2)); margin-left: calc(((100% - 540px) / 2) + 196px)}
-.u-section-2 .u-text-2 {margin-right: calc(((100% - 540px) / 2) + 176px); margin-left: calc(((100% - 540px) / 2) + 230px)}
-.u-section-2 .u-text-3 {margin-right: calc(((100% - 540px) / 2) + 237px); margin-left: calc(((100% - 540px) / 2) + 230px)} }
+@media (max-width: 767px){ .u-section-2 {min-height: 485px}
+.u-section-2 .u-image-1 {width: 270px; height: 270px}
+.u-section-2 .u-text-1 {width: 344px; margin-top: -271px; margin-left: auto; margin-right: auto}
+.u-section-2 .u-text-2 {font-size: 1rem; margin-top: 0; margin-right: calc(((100% - 540px) / 2) + 186px); margin-left: calc(((100% - 540px) / 2) + 220px)}
+.u-section-2 .u-text-3 {font-size: 1rem; margin: 18px calc(((100% - 540px) / 2)) 10px calc(((100% - 540px) / 2) + 220px)} }
 
-@media (max-width: 575px){ .u-section-2 .u-image-1 {width: 170px; height: 170px}
-.u-section-2 .u-text-1 {margin-top: -122px; margin-right: calc(((100% - 340px) / 2)); margin-left: calc(((100% - 340px) / 2))}
-.u-section-2 .u-text-2 {margin-right: calc(((100% - 340px) / 2) + 111px); margin-left: calc(((100% - 340px) / 2) + 145px)}
-.u-section-2 .u-text-3 {margin-right: calc(((100% - 340px) / 2) + 149px); margin-left: calc(((100% - 340px) / 2) + 145px)} }.u-section-3 {background-image: none}
+@media (max-width: 575px){ .u-section-2 {min-height: 462px}
+.u-section-2 .u-image-1 {width: 170px; height: 170px; margin-top: 0}
+.u-section-2 .u-text-1 {width: auto; margin-top: -170px; margin-right: calc(((100% - 340px) / 2) + -180px); margin-left: calc(((100% - 340px) / 2) + 180px)}
+.u-section-2 .u-text-2 {font-size: 0.875rem; margin-top: 60px; margin-right: calc(((100% - 340px) / 2)); margin-left: calc(((100% - 340px) / 2) + 152px)}
+.u-section-2 .u-text-3 {font-size: 0.875rem; margin-right: calc(((100% - 340px) / 2)); margin-bottom: 40px; margin-left: calc(((100% - 340px) / 2) + 23px)} }.u-section-3 {background-image: none}
 .u-section-3 .u-sheet-1 {min-height: 1452px}
 .u-section-3 .u-text-1 {font-weight: 700; font-size: 3rem; margin: 55px auto 0}
 .u-section-3 .u-list-1 {width: 1106px; min-height: 916px; grid-template-columns: calc(((100% - 1140px) / 2) + 565px) calc(((100% - 1140px) / 2) + 565px); grid-gap: 10px 10px; margin: 10px 0 2px auto}
+.u-section-3 .u-list-item-1 {width: 548px; margin-right: auto; margin-left: auto}
 .u-section-3 .u-container-layout-1 {padding: 30px}
 .u-section-3 .u-icon-1 {height: 78px; width: 78px; background-image: none; margin: 0 auto}
 .u-section-3 .u-text-2 {text-transform: uppercase; letter-spacing: 2px; margin: 20px 2px 0}
+.u-section-3 .u-list-item-2 {width: 548px; margin-right: auto; margin-left: auto}
 .u-section-3 .u-container-layout-2 {padding: 30px}
 .u-section-3 .u-icon-2 {height: 78px; width: 78px; background-image: none; margin: 0 auto}
 .u-section-3 .u-text-3 {text-transform: uppercase; letter-spacing: 2px; margin: 20px 2px 0}
@@ -64,6 +77,7 @@
 .u-section-3 .u-container-layout-4 {padding: 30px}
 .u-section-3 .u-icon-4 {height: 78px; width: 78px; background-image: none; margin: 0 auto}
 .u-section-3 .u-text-5 {text-transform: uppercase; letter-spacing: 2px; margin: 20px 2px 0}
+.u-section-3 .u-list-item-5 {width: 548px; margin-right: auto; margin-left: auto}
 .u-section-3 .u-container-layout-5 {padding: 30px}
 .u-section-3 .u-icon-5 {height: 78px; width: 78px; background-image: none; margin: 0 auto}
 .u-section-3 .u-text-6 {text-transform: uppercase; letter-spacing: 2px; margin: 20px 2px 0}
@@ -71,6 +85,7 @@
 .u-section-3 .u-container-layout-6 {padding: 30px}
 .u-section-3 .u-icon-6 {height: 78px; width: 78px; background-image: none; margin: 0 auto}
 .u-section-3 .u-text-7 {text-transform: uppercase; letter-spacing: 2px; margin: 20px 2px 0}
+.u-section-3 .u-list-item-7 {width: 548px; margin-right: auto; margin-left: auto}
 .u-section-3 .u-container-layout-7 {padding: 30px}
 .u-section-3 .u-icon-7 {height: 78px; width: 78px; background-image: none; margin: 0 auto}
 .u-section-3 .u-text-8 {text-transform: uppercase; letter-spacing: 2px; margin: 20px 2px 0}
@@ -95,14 +110,14 @@
 .u-section-3 .u-icon-12 {height: 78px; width: 78px; background-image: none; margin: 0 auto}
 .u-section-3 .u-text-13 {text-transform: uppercase; letter-spacing: 2px; margin: 20px 2px 0} 
 
-@media (max-width: 1199px){ .u-section-3 .u-list-1 {width: 940px; min-height: 1245px; grid-template-columns: repeat(2, 50%); height: auto}
+@media (max-width: 1199px){ .u-section-3 .u-sheet-1 {min-height: 1451px}
+.u-section-3 .u-list-1 {min-height: 1334px; grid-template-columns: 50% 50%; height: auto; margin-top: 14px; margin-bottom: 0; margin-right: initial; margin-left: initial; width: auto}
 .u-section-3 .u-list-item-3 {width: 341px; margin-right: auto; margin-left: auto}
 .u-section-3 .u-list-item-4 {width: 341px; margin-right: auto; margin-left: auto} }
 
-@media (max-width: 991px){ .u-section-3 .u-list-1 {width: 720px; grid-template-columns: 100%} }
+@media (max-width: 991px){ .u-section-3 .u-list-1 {grid-template-columns: 100%; width: auto; margin-right: initial; margin-left: initial} }
 
 @media (max-width: 767px){ .u-section-3 .u-text-1 {font-size: 2.25rem}
-.u-section-3 .u-list-1 {width: 540px}
 .u-section-3 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
 .u-section-3 .u-text-2 {margin-left: 0; margin-right: 0}
 .u-section-3 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
@@ -128,34 +143,39 @@
 .u-section-3 .u-container-layout-12 {padding-left: 10px; padding-right: 10px}
 .u-section-3 .u-text-13 {margin-left: 0; margin-right: 0} }
 
-@media (max-width: 575px){ .u-section-3 .u-list-1 {width: 340px} }.u-section-4 {background-image: url("images/Backgrounds_Line_of_computer_code__gray_background_099063_18.jpg"); background-position: 50% 50%}
+@media (max-width: 575px){ .u-section-3 .u-sheet-1 {min-height: 3062px}
+.u-section-3 .u-list-1 {min-height: 2963px; width: auto; margin-right: initial; margin-left: initial}
+.u-section-3 .u-list-item-3 {width: 548px}
+.u-section-3 .u-list-item-4 {width: 548px} }.u-section-4 {background-image: url("images/Backgrounds_Line_of_computer_code__gray_background_099063_18.jpg"); background-position: 50% 50%}
 .u-section-4 .u-sheet-1 {min-height: 106px}
 .u-section-4 .u-text-1 {font-weight: 700; font-size: 2.25rem; margin: 24px 423px 24px 0} 
 
-@media (max-width: 1199px){ .u-section-4 {min-height: 899px}
-.u-section-4 .u-sheet-1 {min-height: 87px}
-.u-section-4 .u-text-1 {margin-right: 223px} }
+@media (max-width: 1199px){ .u-section-4 .u-sheet-1 {min-height: 94px}
+.u-section-4 .u-text-1 {width: auto; margin: 0 262px 37px -39px} }
 
 @media (max-width: 991px){ .u-section-4 {min-height: 689px}
-.u-section-4 .u-sheet-1 {min-height: 67px}
-.u-section-4 .u-text-1 {margin-right: 3px} }
+.u-section-4 .u-sheet-1 {min-height: 72px}
+.u-section-4 .u-text-1 {margin-right: 152px} }
 
 @media (max-width: 767px){ .u-section-4 {min-height: 517px}
-.u-section-4 .u-sheet-1 {min-height: 50px}
-.u-section-4 .u-text-1 {margin-right: 0} }
+.u-section-4 .u-sheet-1 {min-height: 163px}
+.u-section-4 .u-text-1 {margin-left: 0; margin-right: 0} }
 
 @media (max-width: 575px){ .u-section-4 {min-height: 326px}
-.u-section-4 .u-sheet-1 {min-height: 31px} }.u-section-5 {background-image: none; min-height: 98px}
+.u-section-4 .u-sheet-1 {min-height: 144px}
+.u-section-4 .u-text-1 {font-size: 1.875rem} }.u-section-5 {background-image: none; min-height: 98px}
 .u-section-5 .u-text-1 {font-weight: 700; font-size: 3.75rem; margin: 2px calc(((100% - 1140px) / 2) + 120px) 2px calc(((100% - 1140px) / 2) + 323px)} 
 
-@media (max-width: 1199px){ .u-section-5 {min-height: 766px}
-.u-section-5 .u-text-1 {margin-right: calc(((100% - 940px) / 2) + 20px); margin-left: calc(((100% - 940px) / 2) + 223px)} }
+@media (max-width: 1199px){ .u-section-5 {min-height: 94px}
+.u-section-5 .u-text-1 {margin-top: -4px; margin-right: calc(((100% - 940px) / 2) + 20px); margin-left: calc(((100% - 940px) / 2) + 223px)} }
 
 @media (max-width: 991px){ .u-section-5 .u-text-1 {margin-right: calc(((100% - 720px) / 2)); margin-left: calc(((100% - 720px) / 2) + 23px)} }
 
-@media (max-width: 767px){ .u-section-5 .u-text-1 {margin-right: calc(((100% - 540px) / 2)); margin-left: calc(((100% - 540px) / 2))} }
+@media (max-width: 767px){ .u-section-5 {min-height: 99px}
+.u-section-5 .u-text-1 {margin: 4px calc(((100% - 540px) / 2))} }
 
-@media (max-width: 575px){ .u-section-5 .u-text-1 {margin-right: calc(((100% - 340px) / 2)); margin-left: calc(((100% - 340px) / 2))} }.u-section-6 {background-image: none}
+@media (max-width: 575px){ .u-section-5 {min-height: 50px}
+.u-section-5 .u-text-1 {font-size: 1.875rem; margin-left: calc(((100% - 340px) / 2)); margin-right: calc(((100% - 340px) / 2))} }.u-section-6 {background-image: none}
 .u-section-6 .u-sheet-1 {min-height: 624px}
 .u-section-6 .u-gallery-1 {height: 589px; grid-gap: 10px 10px; width: 665px; margin: 34px auto 2px}
 .u-section-6 .u-carousel-indicators-1 {position: absolute; bottom: 10px}
@@ -175,20 +195,20 @@
 .u-section-6 .u-carousel-control-1 {position: absolute; left: calc(((100% - 1140px) / 2)  + 183px); width: 40px; height: 40px; right: auto}
 .u-section-6 .u-carousel-control-2 {position: absolute; right: 0; width: 40px; height: 40px} 
 
-@media (max-width: 1199px){ .u-section-6 .u-sheet-1 {min-height: 428px}
-.u-section-6 .u-gallery-1 {height: 426px; grid-template-columns: repeat(3, auto)}
+@media (max-width: 1199px){ .u-section-6 .u-sheet-1 {min-height: 580px}
+.u-section-6 .u-gallery-1 {height: 546px; grid-template-columns: auto auto auto; width: 607px}
 .u-section-6 .u-carousel-control-1 {left: calc(((100% - 940px) / 2)  + 83px)} }
 
 @media (max-width: 991px){ .u-section-6 .u-sheet-1 {min-height: 830px}
 .u-section-6 .u-gallery-1 {height: 710px; grid-template-columns: repeat(2, auto)}
 .u-section-6 .u-carousel-control-1 {left: calc(((100% - 720px) / 2)  + -27px)} }
 
-@media (max-width: 767px){ .u-section-6 .u-sheet-1 {min-height: 1637px}
-.u-section-6 .u-gallery-1 {height: 1978px; grid-template-columns: auto; width: 540px}
+@media (max-width: 767px){ .u-section-6 .u-sheet-1 {min-height: 450px}
+.u-section-6 .u-gallery-1 {height: 416px; grid-template-columns: auto; width: 423px}
 .u-section-6 .u-carousel-control-1 {left: calc(((100% - 540px) / 2)  + -117px)} }
 
-@media (max-width: 575px){ .u-section-6 .u-sheet-1 {min-height: 1289px}
-.u-section-6 .u-gallery-1 {height: 1245px; grid-template-columns: repeat(1, auto); width: 340px}
+@media (max-width: 575px){ .u-section-6 .u-sheet-1 {min-height: 357px}
+.u-section-6 .u-gallery-1 {height: 328px; width: 300px; margin-top: 28px}
 .u-section-6 .u-carousel-control-1 {left: calc(((100% - 340px) / 2)  + -217px)} }.u-section-7 {background-image: none}
 .u-section-7 .u-sheet-1 {min-height: 79px}
 .u-section-7 .u-social-icons-1 {white-space: nowrap; height: 77px; min-height: 16px; width: 252px; min-width: 68px; margin: 1px auto 0 64px}
@@ -199,15 +219,24 @@
 .u-section-7 .u-text-1 {font-size: 1.875rem; font-weight: 700; margin: -56px 373px 0 auto}
 .u-section-7 .u-btn-2 {background-image: none; font-weight: 700; font-size: 1.25rem; margin: -51px 0 15px auto; padding: 9px 0 10px} 
 
-@media (max-width: 1199px){ .u-section-7 {min-height: 520px}
-.u-section-7 .u-btn-1 {width: 70px; margin-left: 145px}
-.u-section-7 .u-text-1 {margin-right: 307px} }
+@media (max-width: 1199px){ .u-section-7 .u-sheet-1 {min-height: 68px}
+.u-section-7 .u-social-icons-1 {height: 51px; width: 173px; margin-top: 0; margin-left: 79px}
+.u-section-7 .u-btn-1 {margin-top: -59px; margin-left: 286px}
+.u-section-7 .u-text-1 {width: auto; margin-top: -60px; margin-right: 248px}
+.u-section-7 .u-btn-2 {margin-top: -46px; margin-bottom: -2px} }
 
 @media (max-width: 991px){ .u-section-7 {min-height: 220px}
-.u-section-7 .u-text-1 {margin-right: 235px} }
+.u-section-7 .u-btn-1 {width: 70px; margin-left: 66px}
+.u-section-7 .u-text-1 {margin-right: 190px} }
 
-@media (max-width: 767px){ .u-section-7 {min-height: 320px}
-.u-section-7 .u-text-1 {margin-right: 176px} }
+@media (max-width: 767px){ .u-section-7 .u-sheet-1 {min-height: 90px}
+.u-section-7 .u-social-icons-1 {height: 39px; width: 136px; margin-top: 60px; margin-left: 0}
+.u-section-7 .u-btn-1 {font-size: 1.5rem; margin-top: -47px; margin-left: 165px}
+.u-section-7 .u-text-1 {font-size: 1.125rem; margin-right: 0} }
 
-@media (max-width: 575px){ .u-section-7 {min-height: 114px}
-.u-section-7 .u-text-1 {margin-right: 111px} }
+@media (max-width: 575px){ .u-section-7 {min-height: 320px}
+.u-section-7 .u-sheet-1 {min-height: 78px}
+.u-section-7 .u-social-icons-1 {height: 29px; width: 108px; margin-left: -9px}
+.u-section-7 .u-btn-1 {font-size: 0.875rem; margin-top: -37px; margin-left: 118px}
+.u-section-7 .u-text-1 {font-size: 0.75rem; margin-right: 20px}
+.u-section-7 .u-btn-2 {font-size: 0.875rem; margin-right: auto} }
