--- a/About.css
+++ b/About.css
@@ -143,8 +143,8 @@
 .u-section-3 .u-container-layout-12 {padding-left: 10px; padding-right: 10px}
 .u-section-3 .u-text-13 {margin-left: 0; margin-right: 0} }
 
-@media (max-width: 575px){ .u-section-3 .u-sheet-1 {min-height: 3062px}
-.u-section-3 .u-list-1 {min-height: 2963px; width: auto; margin-right: initial; margin-left: initial}
+@media (max-width: 575px){ .u-section-3 .u-sheet-1 {min-height: 3098px}
+.u-section-3 .u-list-1 {min-height: 2932px; width: 636px; margin: 10px -148px 60px}
 .u-section-3 .u-list-item-3 {width: 548px}
 .u-section-3 .u-list-item-4 {width: 548px} }.u-section-4 {background-image: url("images/Backgrounds_Line_of_computer_code__gray_background_099063_18.jpg"); background-position: 50% 50%}
 .u-section-4 .u-sheet-1 {min-height: 106px}
