--- a/About.css
+++ b/About.css
@@ -205,56 +205,94 @@
 @media (max-width: 575px){ .u-section-5 .u-sheet-1 {min-height: 424px}
 .u-section-5 .u-text-1 {font-size: 1.5rem; margin-top: 20px; width: 340px}
 .u-section-5 .u-gallery-1 {height: 338px; margin-top: 20px; margin-bottom: 8px; width: auto; margin-right: initial; margin-left: initial}
-.u-section-5 .u-carousel-control-1 {left: calc(((100% - 340px) / 2)  + -217px)} }.u-section-6 .u-sheet-1 {min-height: 661px}
-.u-section-6 .u-gallery-1 {height: 593px; grid-gap: 17px 17px; margin: 60px auto 8px}
-.u-section-6 .u-gallery-inner-1 {grid-template-columns: repeat(3, auto); grid-gap: 17px}
-.u-section-6 .u-over-slide-1 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px}
-.u-section-6 .u-over-slide-2 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px}
-.u-section-6 .u-over-slide-3 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px}
-.u-section-6 .u-over-slide-4 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px} 
+.u-section-5 .u-carousel-control-1 {left: calc(((100% - 340px) / 2)  + -217px)} }.u-section-6 .u-sheet-1 {min-height: 475px}
+.u-section-6 .u-layout-wrap-1 {margin: 68px auto 0 0}
+.u-section-6 .u-layout-cell-1 {min-height: 407px}
+.u-section-6 .u-container-layout-1 {padding: 30px}
+.u-section-6 .u-image-1 {height: 347px; margin: 0 auto 0 0}
+.u-section-6 .u-layout-cell-2 {min-height: 96px}
+.u-section-6 .u-container-layout-2 {padding: 30px}
+.u-section-6 .u-text-1 {margin-top: 0; margin-bottom: 0}
+.u-section-6 .u-layout-cell-3 {min-height: 311px}
+.u-section-6 .u-container-layout-3 {padding: 30px}
+.u-section-6 .u-text-2 {font-weight: 700; margin: 0 13px 0 -13px}
+.u-section-6 .u-layout-cell-4 {min-height: 311px}
+.u-section-6 .u-container-layout-4 {padding: 30px}
+.u-section-6 .u-text-3 {margin-top: 0; margin-bottom: 0} 
 
-@media (max-width: 1199px){ .u-section-6 .u-sheet-1 {min-height: 356px}
-.u-section-6 .u-gallery-1 {height: 489px; grid-template-columns: auto auto auto; margin-right: initial; margin-left: initial} }
+@media (max-width: 1199px){ .u-section-6 .u-sheet-1 {min-height: 472px}
+.u-section-6 .u-layout-wrap-1 {margin-right: initial; margin-left: initial}
+.u-section-6 .u-layout-cell-1 {min-height: 336px}
+.u-section-6 .u-image-1 {height: 275px; margin-right: initial; margin-left: initial}
+.u-section-6 .u-layout-cell-2 {min-height: 79px}
+.u-section-6 .u-layout-cell-3 {min-height: 256px}
+.u-section-6 .u-text-2 {margin-left: 0; margin-right: 0}
+.u-section-6 .u-layout-cell-4 {min-height: 256px} }
 
-@media (max-width: 991px){ .u-section-6 .u-sheet-1 {min-height: 746px}
-.u-section-6 .u-gallery-1 {height: 562px; grid-template-columns: repeat(2, auto); margin-right: initial; margin-left: initial}
-.u-section-6 .u-gallery-inner-1 {grid-template-columns: repeat(2, auto)} }
+@media (max-width: 991px){ .u-section-6 .u-sheet-1 {min-height: 436px}
+.u-section-6 .u-layout-cell-1 {min-height: 100px}
+.u-section-6 .u-image-1 {height: 716px; margin-right: initial; margin-left: initial}
+.u-section-6 .u-layout-cell-2 {min-height: 100px}
+.u-section-6 .u-layout-cell-3 {min-height: 100px}
+.u-section-6 .u-layout-cell-4 {min-height: 100px} }
 
-@media (max-width: 767px){ .u-section-6 .u-sheet-1 {min-height: 1608px}
-.u-section-6 .u-gallery-1 {height: 1686px; grid-template-columns: repeat(1, auto); margin-right: initial; margin-left: initial}
-.u-section-6 .u-gallery-inner-1 {grid-template-columns: repeat(1, auto)} }
+@media (max-width: 767px){ .u-section-6 .u-sheet-1 {min-height: 536px}
+.u-section-6 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
+.u-section-6 .u-image-1 {height: 564px; margin-right: initial; margin-left: initial}
+.u-section-6 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
+.u-section-6 .u-container-layout-3 {padding-left: 10px; padding-right: 10px}
+.u-section-6 .u-container-layout-4 {padding-left: 10px; padding-right: 10px} }
 
-@media (max-width: 575px){ .u-section-6 .u-sheet-1 {min-height: 1033px}
-.u-section-6 .u-gallery-1 {height: 1062px; margin-right: initial; margin-left: initial} }.u-section-7 {background-image: none}
-.u-section-7 .u-sheet-1 {min-height: 79px}
-.u-section-7 .u-social-icons-1 {white-space: nowrap; height: 77px; min-height: 16px; width: 252px; min-width: 68px; margin: 1px auto 0 64px}
-.u-section-7 .u-icon-1 {height: 100%}
-.u-section-7 .u-icon-2 {height: 100%}
-.u-section-7 .u-icon-3 {height: 100%}
-.u-section-7 .u-btn-1 {font-weight: 700; font-size: 1.875rem; margin: -73px auto 0 345px; padding: 10px 2px 10px 1px}
-.u-section-7 .u-text-1 {font-size: 1.875rem; font-weight: 700; margin: -56px 373px 0 auto}
-.u-section-7 .u-btn-2 {background-image: none; font-weight: 700; font-size: 1.25rem; margin: -51px 0 15px auto; padding: 9px 0 10px} 
+@media (max-width: 575px){ .u-section-6 .u-image-1 {height: 347px; margin-right: initial; margin-left: initial} }.u-section-7 .u-sheet-1 {min-height: 661px}
+.u-section-7 .u-gallery-1 {height: 593px; grid-gap: 17px 17px; margin: 60px auto 8px}
+.u-section-7 .u-gallery-inner-1 {grid-template-columns: repeat(3, auto); grid-gap: 17px}
+.u-section-7 .u-over-slide-1 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px}
+.u-section-7 .u-over-slide-2 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px}
+.u-section-7 .u-over-slide-3 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px}
+.u-section-7 .u-over-slide-4 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px} 
 
-@media (max-width: 1199px){ .u-section-7 .u-sheet-1 {min-height: 68px}
-.u-section-7 .u-social-icons-1 {height: 51px; width: 173px; margin-top: 0; margin-left: 79px}
-.u-section-7 .u-btn-1 {margin-top: -59px; margin-left: 286px}
-.u-section-7 .u-text-1 {width: auto; margin-top: -60px; margin-right: 248px}
-.u-section-7 .u-btn-2 {margin-top: -46px; margin-bottom: -2px} }
+@media (max-width: 1199px){ .u-section-7 .u-sheet-1 {min-height: 356px}
+.u-section-7 .u-gallery-1 {height: 489px; grid-template-columns: auto auto auto; margin-right: initial; margin-left: initial} }
 
-@media (max-width: 991px){ .u-section-7 .u-sheet-1 {min-height: 51px}
-.u-section-7 .u-social-icons-1 {height: 34px; width: 121px; margin-top: 11px; margin-left: 165px}
-.u-section-7 .u-btn-1 {font-size: 1.5rem; margin-top: -43px; margin-left: 86px}
-.u-section-7 .u-text-1 {font-size: 1.125rem; margin-top: -47px; margin-right: 156px}
-.u-section-7 .u-btn-2 {margin-top: -33px; margin-right: 9px; margin-bottom: 0} }
+@media (max-width: 991px){ .u-section-7 .u-sheet-1 {min-height: 746px}
+.u-section-7 .u-gallery-1 {height: 562px; grid-template-columns: repeat(2, auto); margin-right: initial; margin-left: initial}
+.u-section-7 .u-gallery-inner-1 {grid-template-columns: repeat(2, auto)} }
 
-@media (max-width: 767px){ .u-section-7 .u-sheet-1 {min-height: 61px}
-.u-section-7 .u-social-icons-1 {height: 39px; width: 136px; margin-top: 1px; margin-left: 0}
-.u-section-7 .u-btn-1 {margin-top: -49px; margin-left: 165px; width: 70px}
-.u-section-7 .u-text-1 {margin-right: 0}
-.u-section-7 .u-btn-2 {margin-right: 0; margin-bottom: -9px} }
+@media (max-width: 767px){ .u-section-7 .u-sheet-1 {min-height: 1608px}
+.u-section-7 .u-gallery-1 {height: 1686px; grid-template-columns: repeat(1, auto); margin-right: initial; margin-left: initial}
+.u-section-7 .u-gallery-inner-1 {grid-template-columns: repeat(1, auto)} }
 
-@media (max-width: 575px){ .u-section-7 .u-sheet-1 {min-height: 66px}
-.u-section-7 .u-social-icons-1 {height: 27px; width: 100px; margin-top: 0; margin-left: 4px}
-.u-section-7 .u-btn-1 {font-size: 0.75rem; margin-top: -33px; margin-left: 115px}
-.u-section-7 .u-text-1 {font-size: 0.75rem; margin-top: -29px; margin-right: 49px}
-.u-section-7 .u-btn-2 {font-size: 0.875rem; margin-top: 0; margin-bottom: 0} }
+@media (max-width: 575px){ .u-section-7 .u-sheet-1 {min-height: 1033px}
+.u-section-7 .u-gallery-1 {height: 1062px; margin-right: initial; margin-left: initial} }.u-section-8 {background-image: none}
+.u-section-8 .u-sheet-1 {min-height: 79px}
+.u-section-8 .u-social-icons-1 {white-space: nowrap; height: 77px; min-height: 16px; width: 252px; min-width: 68px; margin: 1px auto 0 64px}
+.u-section-8 .u-icon-1 {height: 100%}
+.u-section-8 .u-icon-2 {height: 100%}
+.u-section-8 .u-icon-3 {height: 100%}
+.u-section-8 .u-btn-1 {font-weight: 700; font-size: 1.875rem; margin: -73px auto 0 345px; padding: 10px 2px 10px 1px}
+.u-section-8 .u-text-1 {font-size: 1.875rem; font-weight: 700; margin: -56px 373px 0 auto}
+.u-section-8 .u-btn-2 {background-image: none; font-weight: 700; font-size: 1.25rem; margin: -51px 0 15px auto; padding: 9px 0 10px} 
+
+@media (max-width: 1199px){ .u-section-8 .u-sheet-1 {min-height: 68px}
+.u-section-8 .u-social-icons-1 {height: 51px; width: 173px; margin-top: 0; margin-left: 79px}
+.u-section-8 .u-btn-1 {margin-top: -59px; margin-left: 286px}
+.u-section-8 .u-text-1 {width: auto; margin-top: -60px; margin-right: 248px}
+.u-section-8 .u-btn-2 {margin-top: -46px; margin-bottom: -2px} }
+
+@media (max-width: 991px){ .u-section-8 .u-sheet-1 {min-height: 51px}
+.u-section-8 .u-social-icons-1 {height: 34px; width: 121px; margin-top: 11px; margin-left: 165px}
+.u-section-8 .u-btn-1 {font-size: 1.5rem; margin-top: -43px; margin-left: 86px}
+.u-section-8 .u-text-1 {font-size: 1.125rem; margin-top: -47px; margin-right: 156px}
+.u-section-8 .u-btn-2 {margin-top: -33px; margin-right: 9px; margin-bottom: 0} }
+
+@media (max-width: 767px){ .u-section-8 .u-sheet-1 {min-height: 61px}
+.u-section-8 .u-social-icons-1 {height: 39px; width: 136px; margin-top: 1px; margin-left: 0}
+.u-section-8 .u-btn-1 {margin-top: -49px; margin-left: 165px; width: 70px}
+.u-section-8 .u-text-1 {margin-right: 0}
+.u-section-8 .u-btn-2 {margin-right: 0; margin-bottom: -9px} }
+
+@media (max-width: 575px){ .u-section-8 .u-sheet-1 {min-height: 66px}
+.u-section-8 .u-social-icons-1 {height: 27px; width: 100px; margin-top: 0; margin-left: 4px}
+.u-section-8 .u-btn-1 {font-size: 0.75rem; margin-top: -33px; margin-left: 115px}
+.u-section-8 .u-text-1 {font-size: 0.75rem; margin-top: -29px; margin-right: 49px}
+.u-section-8 .u-btn-2 {font-size: 0.875rem; margin-top: 0; margin-bottom: 0} }
